@@ -718,6 +718,16 @@ void G4UImanager::SetUpForAThread(G4int tId)
   threadCout->SetIgnoreCout(igThreadID);
 }
 
+void G4UImanager::SetUpForSpecialThread(G4String pref)
+{
+    threadID = G4Threading::GENERICTHREAD_ID;
+    G4Threading::G4SetThreadId(threadID);
+    G4iosInitialization();
+    threadCout = new G4MTcoutDestination(threadID);
+    threadCout->SetPrefixString(pref);
+    threadCout->SetIgnoreCout(igThreadID);
+}
+
 void G4UImanager::SetCoutFileName(const G4String& fileN, G4bool ifAppend)
 {
   // for sequential mode, ignore this method.
